# kisstty

./: .gitignore  Cargo.toml  LICENSE  Makefile  README-ATARI.md  README.md  THIRD-PARTY-NOTICES.md  run-atari.sh
platform/apple2/: apple2-main.s
platform/atari/: atari-main.s  atari-utils.s  atari-wozmon.s  boot850.inc  boot850.s  common.inc  config.inc  config.s  globals.inc  globals.s  kbd.inc  kbd.s  line_input.inc  line_input.s  macros.inc  main.inc  main.s  main_input.inc  main_input.s  main_output.inc  main_output.s  mainout.s  maintextinput.s  memmove.inc  memmove.s  pctl_kiss.inc  pctl_kiss.s  protocol_kiss.inc  protocol_kiss.s  rs232.inc  rs232.s  run-socat.sh  term.inc  term.s  term_line_input.inc  term_line_input.s  term_multi_input.inc  term_multi_input.s  term_output.inc  term_output.s  (+12 more)
platform/c64/: c64-main.s
platform/rust/: .gitignore  Cargo.toml
platform/rust/src/: app.rs  command.rs  config.rs  event.rs  kiss.rs  line_input.rs  log.rs  logging.rs  main.rs  message.rs  single_instance.rs  slash.rs  tui.rs  ui.rs
platform/rust/src/kiss/: aprs.rs  ax25.rs  client.rs  session.rs
platform/rust/src/ui/: config_ui.rs  line_input.rs  main_ui.rs  multi_line_output.rs  multiline_output.rs  too_small_ui.rs  ui_command.rs
tests/: .gitignore  direwolf.conf.template  inject-test-packet.sh  send-test-packet.sh
tests/aprs/: message-exactly-1-line.txt  message-two-line.txt  message.txt  mic-e.txt  msg-ack.txt  msg-no-digis.txt  msg-one-digi.txt  msg-one-line-short.txt  msg-one-line-three-addressee-spaces.txt  msg-src-ssid-one-digit.txt  msg-with-id.txt  (+11 more)
(+5 files in other folders)
